Changes to make packaging successful
added necessary export to jpackage call
delete dmg file, download pages